--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,8 @@ spring.jpa.show-sql=true
 
 logging.level.org.hibernate.SQL=DEBUG	
 logging.level.org.hibernate.type=TRACE
+
+#solucion para----- Relying upon circular references is discouraged and they are prohibited by default. 
+#Update your application to remove the dependency cycle between beans. As a last resort, 
+#it may be possible to break the cycle automatically by setting spring.main.allow-circular-references to true.
+spring.main.allow-circular-references=true
